--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ feed:
   path: atom.xml
   limit: 20
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: Material-T
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
