--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: true
-  line_number: true
+  enable: false
+  line_number: false
   auto_detect: false
   tab_replace:
   
@@ -50,7 +50,10 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 0
+  yearly: true
+  monthly: true
+  daily: false
   order_by: -date
   
 # Category & Tag
@@ -87,5 +90,7 @@ theme: Material-T
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/tangbzai/tangbzai.github.io.git
+  repo: 
+    github: git@github.com:tangbzai/tangbzai.github.io.git
+    coding: git@git.dev.tencent.com:btsfii/blog.git
   branch: master
