--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle:
 description: 糖仔呐的博客
 keywords:
 author: 糖仔
-language: zh-cn
+language: zh-CN
 timezone:
 
 # URL
@@ -78,13 +78,17 @@ pagination_dir: page
 #RSS订阅
 plugin:
 - hexo-generator-feed
+
+markdown_it_plus: 
+  unicodeTextInMathMode: true # 解决LaTeX中文 warn: [uncodeTextInMathMode]
+
 #Feed Atom
 feed:
   type: atom
   path: atom.xml
   limit: 20
 ## Themes: https://hexo.io/themes/
-theme: Material-T
+theme: fluid
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
