--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ skip_render:
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link: false # Open external links in new tab
 filename_case: 0
 render_drafts: false
 post_asset_folder: true
@@ -40,7 +40,7 @@ relative_link: false
 future: true
 highlight:
   enable: false
-  line_number: false
+  line_number: true
   auto_detect: false
   tab_replace:
   
@@ -82,6 +82,13 @@ plugin:
 markdown_it_plus: 
   unicodeTextInMathMode: true # 解决LaTeX中文 warn: [uncodeTextInMathMode]
 
+# mermaid chart
+mermaid: ## mermaid url https://github.com/knsv/mermaid
+  enable: true  # default true
+  version: "8.4.8" # default v7.1.2
+  options:  # find more api options from https://github.com/knsv/mermaid/blob/master/src/mermaidAPI.js
+    #startOnload: true  // default true
+    
 #Feed Atom
 feed:
   type: atom
