--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -199,6 +199,9 @@ post:
     enable: true
     specific: true  # 开启后，只有在文章 Front-matter 里指定 `math: true` 才会在文章页启动公式转换，以便在页面不包含公式时提高加载速度
     engine: katex  # 公式引擎  available: mathjax | katex
+  mermaid: # 流程图
+    enable: true
+    specific: true  # 开启后，只有在文章 Front-matter 里指定 `mermaid: true` 才会在文章页启动公式转换，以便在页面不包含公式时提高加载速度
 
 #---------------------------
 # 评论
