--- a/themes/fluid/_static_prefix.yml
+++ b/themes/fluid/_static_prefix.yml
@@ -68,3 +68,5 @@ katex: https://cdn.staticfile.org/KaTeX/0.11.1/
 aplayer: https://cdn.staticfile.org/aplayer/1.10.1/
 
 busuanzi: https://busuanzi.ibruce.info/busuanzi/2.3/
+
+mermaid: https://cdn.bootcss.com/mermaid/8.4.8/
