添加博客变黑白的插件

--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,13 @@ mermaid: ## mermaid url https://github.com/knsv/mermaid
   version: "8.4.8" # default v7.1.2
   options:  # find more api options from https://github.com/knsv/mermaid/blob/master/src/mermaidAPI.js
     #startOnload: true  // default true
-    
+
+memorial_day:
+  # Better to close it when it is not used
+  enable: true
+  # Specified date will be greyed
+  day: 2020-04-04
+
 #Feed Atom
 feed:
   type: atom
