--- a/themes/fluid/_static_prefix.yml
+++ b/themes/fluid/_static_prefix.yml
@@ -69,4 +69,4 @@ aplayer: https://cdn.staticfile.org/aplayer/1.10.1/
 
 busuanzi: https://busuanzi.ibruce.info/busuanzi/2.3/
 
-mermaid: https://cdn.bootcss.com/mermaid/8.4.8/
+mermaid: https://cdn.staticfile.org/mermaid/8.4.8/
