--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-json-content": "^3.0.1",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-memorial-day": "^0.1.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.1",
