--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 糖仔呐
+title: 糖仔
 subtitle:
-description: 糖仔呐的博客
-keywords:
+description: 糖仔的博客
+keywords: 糖仔的博客;博客;HTML;CSS;javascript;
 author: 糖仔
 language: zh-CN
 timezone:
